apps/arr-stack/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeSelector:
        affected_vlan: "50"
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:4.0.20@sha256:f247545d23ba8b233d6604575347e48a623fe6ad75dda02348bf81917f3b5c06
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsUser: 3102
          runAsGroup: 3100
        ports:
        - name: sonarr
          containerPort: 8989
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media-data
          mountPath: /media_data
        - name: run-tmpfs
          mountPath: /run
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "1500m"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config-pvc
      - name: media-data
        persistentVolumeClaim:
          claimName: media-data-pvc
      - name: run-tmpfs
        emptyDir:
          medium: Memory
