apps/arr-stack/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-webui
spec:
  selector:
    app: sonarr
  ports:
  - port: 8989
