apps/arr-stack/sonarr/route.yaml
# apps/arr-stack/sonarr/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-route
  namespace: sonarr
  annotations:
    cilium.io/auth-method: "external-auth"
    cilium.io/auth-type: "sonarr-auth-filter"
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: cluster-gateway
      sectionName: sonarr-https     
  hostnames:
    - "sonarr.hoareau-marion.eu"
  rules:
    - backendRefs:
        - name: auth-sonarr
          namespace: shared-authentication
          port: 80
        # - name: sonarr-webui
        #   port: 8989
